--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Fetch</h1>
-    <div id="main"></div>
+    <h1>Constructor Function</h1>
 </body>
 <script src="./index.js"></script>
 </html>
