--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Constructor Function</h1>
+    <h1>Promise</h1>
+
+    <input type="text" placeholder="enter your password">
+    <button onclick="Delayfun()">submit</button>
+<br>
+    <img alt="">
+
 </body>
 <script src="./index.js"></script>
 </html>
