--- a/index.html
+++ b/index.html
@@ -2,45 +2,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HOME PAGE</title>
+
+   
+    <link rel="stylesheet" href="../CSS/navbar.css">  
+    <link rel="stylesheet" href="./css/index.css">    
 </head>
-<style>
-    #container{
-        display: grid;
-        grid-template-columns: repeat(4,1fr);
-        gap: 20px;
-    }
-    #container>div{
-        border: 2px solid;
-    }
-    #container>div>iframe{
-        width: 100%;
-    }
-    input{
-        padding:10px;
-        width: 300px;
-        border-color:gold;
-    }
-    button{
-        border-color:gold;
-        height:40px;
-    }
-    div{
-        border: 2px solid;
-    }
-    div>img{
-       /* margin-top:40px;  */
-        width: 200px;
-        height: 80px;
-    }
-</style>
 <body>
-    <div>
-    <img src="https://fdn.gsmarena.com/imgroot/news/21/12/youtube-premium-listening-controls/-728x314/gsmarena_000.jpg">
-    <input type="text" placeholder="Search for content">
-    <button onclick="getData()">search</button>
-    </div>
-    <div id="container"></div>
+    <nav>
+        <a href="./index.html">HOME</a>
+        <span id="navbar">
+            <a href="./html/login.html">LOGIN</a>
+            <a href="./html/signup.html">SIGNUP</a>
+          
+        </span>
+    </nav>
+        <h1>HOME PAGE</h1>
+        <hr>
+        <div id="main"></div>
 </body>
-<script src="./index.js"></script>
+    <script src="./js/index.js"></script>
+    <script src="./js/data.js"></script>
 </html>
